--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <meta property="og:description" content="Frontend em Angular do DevWeek Java+Angular - Santander / Digital Innovation One" />
   <meta property="og:url" content="http://bootcamp-java-santander.herokuapp.com/bootcamp/swagger-ui/index.html?configUrl=/bootcamp/v3/api-docs/swagger-config#" />
   <!-- <meta property="og:type" content="video.movie" />-->
-  <meta property="og:image" content="https://instagram.frec21-1.fna.fbcdn.net/v/t51.2885-19/s150x150/165624449_246095587247356_5515567046051347508_n.jpg?tp=1&_nc_ht=instagram.frec21-1.fna.fbcdn.net&_nc_ohc=ARrOqovFmOIAX_w8KCS&edm=ABfd0MgBAAAA&ccb=7-4&oh=7e70088b1f1be3daf541c8e80f169be9&oe=60BCA583&_nc_sid=7bff83" />
+  <meta property="og:image" content="https://user-images.githubusercontent.com/55901214/120249842-8e926e00-c252-11eb-8e3d-4c88701ad9e4.jpg" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
 </head>
