final adjusts open graph

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Santander - Homebroker - DIO</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:title" content="BootCamp Santander / DIO" />
+  <meta property="og:title" content="Santander - Homebroker from BootCamp Santander / DIO" />
   <meta property="og:description" content="Frontend em Angular do DevWeek Java+Angular - Santander / Digital Innovation One" />
   <meta property="og:url" content="http://bootcamp-java-santander.herokuapp.com/bootcamp/swagger-ui/index.html?configUrl=/bootcamp/v3/api-docs/swagger-config#" />
   <!-- <meta property="og:type" content="video.movie" />-->
